kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fola3-client
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - fola3.elvir.dev
    secretName: fola3-client-tls
  rules:
  - host: "fola3.elvir.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fola3-client
            port:
              number: 80
